--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async": "^3.2.4",
+    "cheerio": "^1.0.0-rc.12",
     "csv-parser": "^3.0.0",
     "csv2json": "^2.0.2",
     "csvtojson": "^2.0.10",
-    "fs": "^0.0.1-security"
+    "fs": "^0.0.1-security",
+    "puppeteer": "^21.2.1"
   }
 }
